--- a/theme.toml
+++ b/theme.toml
@@ -1,25 +1,22 @@
 # theme.toml template for a Hugo theme
 # See https://github.com/gohugoio/hugoThemes#themetoml for an example
 
-name = "Hugo Bear Blog"
+name = "Hugo Bear Cub"
 license = "MIT"
-licenselink = "https://github.com/janraasch/hugo-bearblog/blob/master/LICENSE"
-description = "A Hugo theme based on »Bear Blog«. Free, no-nonsense, super-fast blogging. »Bear Blog« now includes a dark color scheme to support dark mode!"
-homepage = "https://github.com/janraasch/hugo-bearblog"
-demosite = "https://janraasch.github.io/hugo-bearblog/"
-tags = ["blog", "responsive", "minimal", "seo", "clean", "simple", "light", "minimalist", "mobile", "fast", "white", "minimalistic", "reading", "dark mode"]
-features = ["favicon", "seo", "no stylesheets", "no javascript", "rss", "dark mode"]
-min_version = "0.73.0"
-# https://gohugo.io/content-management/taxonomies#default-taxonomies
-# https://gohugo.io/templates/taxonomy-templates/#example-list-tags-in-a-single-page-template
-# https://gohugo.io/templates/taxonomy-templates/#example-list-all-site-tags
+licenselink = "https://github.com/clente/hugo-bearcub/blob/main/LICENSE"
+description = "A Hugo theme based on »Hugo Bear Blog«. Free, extra-light, super-fast blogging."
+homepage = "https://github.com/clente/hugo-bearcub"
+tags = ["blog", "responsive", "minimal", "seo", "clean", "simple", "light", "minimalist", "mobile", "fast", "reading"]
+features = ["favicon", "seo", "no stylesheets", "no javascript", "rss"]
+min_version = "0.110.0"
 
+# If the theme has a single author
 [author]
-  name = "Jan Raasch"
-  homepage = "https://www.janraasch.com"
+    name = "Caio Lente"
+    homepage = "https://lente.dev"
 
 # If porting an existing theme
 [original]
-  name = "ʕ•ᴥ•ʔ Bear Blog"
-  homepage = "https://bearblog.dev"
-  repo = "https://github.com/HermanMartinus/bearblog"
+    author = "Jan Raasch"
+    homepage = "https://www.janraasch.com"
+    repo = "https://github.com/janraasch/hugo-bearblog"
