--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -8,7 +8,6 @@ theme = "hugo-bearcub"
 # Basic metadata configuration for your blog.
 author = "Caio Lente"
 copyright = "Caio Lente (CC BY-SA 4.0)"
-DefaultContentLanguage = "en"
 
 # highlighting without inline styles
 [markup]
@@ -21,6 +20,7 @@ DefaultContentLanguage = "en"
 # There are different options to translate files
 # See https://gohugo.io/content-management/multilingual/#translation-by-filename
 # And https://gohugo.io/content-management/multilingual/#translation-by-content-directory
+DefaultContentLanguage = "en"
 [languages]
   [languages.en]
     title = "Example Site"
@@ -39,14 +39,6 @@ DefaultContentLanguage = "en"
         name = 'Blog'
         url = '/blog'
         weight = 2
-      [[languages.en.menu.main]]
-        name = 'Email'
-        url = '/ERRORERRORERROR'
-        weight = 3
-      [[languages.en.menu.main]]
-        name = 'RSS'
-        url = '/index.xml'
-        weight = 4
   [languages.pt]
     title = "Site Exemplo"
     languageName = "Português 🇧🇷"
@@ -64,14 +56,6 @@ DefaultContentLanguage = "en"
         name = 'Blog'
         url = '/pt/blog'
         weight = 2
-      [[languages.pt.menu.main]]
-        name = 'Email'
-        url = '/pt/ERRORERRORERROR'
-        weight = 3
-      [[languages.pt.menu.main]]
-        name = 'RSS'
-        url = '/pt/index.xml'
-        weight = 4
 
 [params]
   # The "description" of your website. This is used in the meta data of your generated html.
@@ -98,3 +82,6 @@ DefaultContentLanguage = "en"
   # /!\ This is an experimental feature, might be removed or changed at any time
   # (Optional, experimental, default false) Enables a drop-down menu for translations only if a translation is present.
   hideUntranslated = false
+
+  # Email
+  email = "c@lente.dev"
