--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -52,6 +52,10 @@ DefaultContentLanguage = "en"
   # The "description" of your website. This is used in the meta data of your generated html.
   description = "Bear Cub Demo"
 
+  # The path to your "favicon". This should be a square (at least 32px x 32px) png-file.
+  # Hint: It's good practise to also put a "favicon.ico"-file into your "static"-folder.
+  favicon = "images/favicon.png"
+
   # These "images" are used for the structured data templates. This will show up, when
   # services like Twitter or Slack want to generate a preview of a link to your site.
   # See https://gohugo.io/templates/internal#twitter-cards and
