Fix config: https://discourse.gohugo.io/t/solved-defaultcontentlanguage-does-not-seem-to-work/4135/8

--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -3,6 +3,7 @@ baseURL = "https://example.com"
 theme = "hugo-bearcub"
 author = "John Doe"
 copyright = "John Doe (CC BY 4.0)"
+defaultContentLanguage = "en"
 
 # Generate a nice robots.txt for SEO
 enableRobotsTXT = true
@@ -21,7 +22,6 @@ enableRobotsTXT = true
 
 # Multilingual mode config. More for information about how to setup translation,
 # see https://gohugo.io/content-management/multilingual/
-DefaultContentLanguage = "en"
 [languages]
   [languages.en]
     title = "Example Site"
