--- a/theme.toml
+++ b/theme.toml
@@ -1,14 +1,16 @@
-# theme.toml template for a Hugo theme
-# See https://github.com/gohugoio/hugoThemes#themetoml for an example
-
 name = "Hugo Bear Cub"
 license = "MIT"
 licenselink = "https://github.com/clente/hugo-bearcub/blob/master/LICENSE"
-description = "A Hugo theme based on »Hugo Bear Blog«. Free, extra-light, super-fast blogging."
+description = "Theme description"
+
+# The home page of the theme, where the source can be found.
 homepage = "https://github.com/clente/hugo-bearcub"
-tags = ["blog", "responsive", "minimal", "seo", "clean", "simple", "light", "minimalist", "mobile", "fast", "reading"]
-features = ["favicon", "seo", "no stylesheets", "no javascript", "rss"]
-min_version = "0.110.0"
+
+# If you have a running demo of the theme.
+demosite = "https://gohugo.io"
+
+tags = ["blog", "responsive", "minimal", "personal", "dark", "multilingual"]
+features = ["favicon", "seo", "no javascript", "rss"]
 
 # If the theme has a single author
 [author]
@@ -20,3 +22,8 @@ min_version = "0.110.0"
     author = "Jan Raasch"
     homepage = "https://www.janraasch.com"
     repo = "https://github.com/janraasch/hugo-bearblog"
+
+# Hugo versions the theme supports
+[module]
+  [module.hugoVersion]
+    min = "0.73.0"
