New images for demo

--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -24,7 +24,7 @@ enableRobotsTXT = true
 # see https://gohugo.io/content-management/multilingual/
 [languages]
   [languages.en]
-    title = "Example Site"
+    title = "Bear Cub"
     languageName = "en-US 🇺🇸"
     LanguageCode = "en-US"
     contentDir = "content"
@@ -32,7 +32,7 @@ enableRobotsTXT = true
       blogPath = "/blog" # Path to your blog section (used by RSS)
       madeWith = "Made with [Bear Cub](https://github.com/clente/hugo-bearcub)"
   [languages.pt]
-    title = "Site Exemplo"
+    title = "Bear Cub"
     languageName = "pt-BR 🇧🇷"
     LanguageCode = "pt-BR"
     contentDir = "content.pt"
@@ -51,11 +51,11 @@ enableRobotsTXT = true
   # to your site. For more information about previews, see
   # https://gohugo.io/templates/internal#twitter-cards and
   # https://gohugo.io/templates/internal#open-graph
-  images = ["/images/share.png"]
+  images = ["/images/share.webp"]
 
   # This title is used as the site_name on the Hugo's internal opengraph
   # structured data template
-  title = "Example Site"
+  title = "Bear Cub"
 
   # Dates are displayed following the format below. For more information about
   # formatting, see https://gohugo.io/functions/format/
