--- a/theme.toml
+++ b/theme.toml
@@ -1,4 +1,4 @@
-name = "Hugo Bear Cub"
+name = "Bear Cub"
 license = "MIT"
 licenselink = "https://github.com/clente/hugo-bearcub/blob/master/LICENSE"
 description = "Theme description"
