--- a/theme.toml
+++ b/theme.toml
@@ -7,7 +7,7 @@ description = "Theme description"
 homepage = "https://github.com/clente/hugo-bearcub"
 
 # If you have a running demo of the theme.
-demosite = "https://gohugo.io"
+demosite = "https://clente.github.io/hugo-bearcub"
 
 tags = ["blog", "responsive", "minimal", "personal", "dark", "multilingual"]
 features = ["favicon", "seo", "no javascript", "rss"]
