--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -61,8 +61,12 @@ enableRobotsTXT = true
   # formatting, see https://gohugo.io/functions/format/
   dateFormat = "2006-01-02"
 
-  # Your email, added to the navbar so readers can reply to your posts
-  email = "me@example.com"
+  # Social media. Delete any item you aren't using to make sure it won't show up
+  # in your website's metadata.
+  [social]
+    email = "me@example.com" # Added to the navbar so readers can reply to posts
+    twitter = "example" # Twitter handle (without '@')
+    facebook_admin = "0000000000" # Facebook Page Admin ID
 
   # (EXPERIMENTAL) If your blog is multilingual but you haven't translated a
   # page, this theme will create a disabled link. By setting `hideUntranslated`
