--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -48,8 +48,8 @@ enableRobotsTXT = true
   favicon = "images/favicon.png"
 
   # These images will show up when services want to generate a preview of a link
-  # to your site. For more information about previews, see
-  # https://gohugo.io/templates/internal#twitter-cards and
+  # to your site. Ignored if `generateSocialCard = true`. For more information
+  # about previews, see https://gohugo.io/templates/internal#twitter-cards and
   # https://gohugo.io/templates/internal#open-graph
   images = ["/images/share.webp"]
 
@@ -61,14 +61,20 @@ enableRobotsTXT = true
   # formatting, see https://gohugo.io/functions/format/
   dateFormat = "2006-01-02"
 
+  # If your blog is multilingual but you haven't translated a page, this theme
+  # will create a disabled link. By setting `hideUntranslated` to true, you can
+  # have the theme simply not show any link
+  hideUntranslated = false
+
+  # (EXPERIMENTAL) This theme is capable of dynamically generating social cards
+  # for posts that don't have `images` defined in their front matter. By setting
+  # `generateSocialCard` to false, you can prevent this behavior. For more
+  # information about images, see https://gohugo.io/functions/images/
+  generateSocialCard = true
+
   # Social media. Delete any item you aren't using to make sure it won't show up
   # in your website's metadata.
   [social]
     email = "me@example.com" # Added to the navbar so readers can reply to posts
     twitter = "example" # Twitter handle (without '@')
     facebook_admin = "0000000000" # Facebook Page Admin ID
-
-  # (EXPERIMENTAL) If your blog is multilingual but you haven't translated a
-  # page, this theme will create a disabled link. By setting `hideUntranslated`
-  # to true, you can have the theme simply not show any link
-  hideUntranslated = false
