--- a/theme.toml
+++ b/theme.toml
@@ -10,7 +10,7 @@ homepage = "https://github.com/clente/hugo-bearcub"
 demosite = "https://clente.github.io/hugo-bearcub"
 
 tags = ["blog", "responsive", "minimal", "personal", "dark", "multilingual"]
-features = ["favicon", "seo", "no javascript", "rss"]
+features = ["favicon", "seo", "no javascript", "rss", "social cards"]
 
 # If the theme has a single author
 [author]
