Fix path to share image

--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -51,7 +51,7 @@ enableRobotsTXT = true
   # to your site. Ignored if `generateSocialCard = true`. For more information
   # about previews, see https://gohugo.io/templates/internal#twitter-cards and
   # https://gohugo.io/templates/internal#open-graph
-  images = ["/images/share.webp"]
+  images = ["images/share.webp"]
 
   # This title is used as the site_name on the Hugo's internal opengraph
   # structured data template
