--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -53,7 +53,7 @@ enableRobotsTXT = true
   # to your site. Ignored if `generateSocialCard = true`. For more information
   # about previews, see https://gohugo.io/templates/internal#twitter-cards and
   # https://gohugo.io/templates/internal#open-graph
-  images = ["/hugo-bearcub/images/share.webp"]
+  images = ["images/share.webp"]
 
   # This title is used as the site_name on the Hugo's internal opengraph
   # structured data template
