Choose between original and herman styles

--- a/exampleSite/hugo.toml
+++ b/exampleSite/hugo.toml
@@ -63,6 +63,12 @@ enableRobotsTXT = true
   # have the theme simply not show any link
   hideUntranslated = false
 
+  # (EXPERIMENTAL) This theme has two options for its CSS styles: "original" and
+  # "herman". The former is what you see on Bear Cub's demo (an optimized
+  # version of Hugo Bear Blog), while the latter has a more modern look based on
+  # Herman Martinus's version of the Blogster Minimal theme for Astro.
+  themeStyle = "original"
+
   # (EXPERIMENTAL) This theme is capable of dynamically generating social cards
   # for posts that don't have `images` defined in their front matter; By setting
   # `generateSocialCard` to false, you can prevent this behavior. For more
