--- a/exampleSite/hugo.toml
+++ b/exampleSite/hugo.toml
@@ -1,11 +1,19 @@
 # Basic config
 baseURL = "https://example.com"
-theme = "hugo-bearcub"
+theme = "hugo-moddedbear-theme"
 copyright = "John Doe (CC BY 4.0)"
 defaultContentLanguage = "en"
 
 # Generate a nice robots.txt for SEO
 enableRobotsTXT = true
+
+# Generate "Bearblog"-like URLs !only!, see https://bearblog.dev/.
+disableKinds = ["taxonomy"]
+ignoreErrors = ["error-disable-taxonomy"]
+
+[permalinks]
+  blog = "/:slug/"
+  tags = "/blog/:slug"
 
 # Setup syntax highlighting without inline styles. For more information about
 # why you'd want to avoid inline styles, see
@@ -23,23 +31,23 @@ enableRobotsTXT = true
 # see https://gohugo.io/content-management/multilingual/
 [languages]
   [languages.en]
-    title = "Bear Cub"
+    title = "Hugo moddedBear"
     languageName = "en-US 🇺🇸"
     LanguageCode = "en-US"
     contentDir = "content"
     [languages.en.params]
-      madeWith = "Made with [Bear Cub](https://github.com/clente/hugo-bearcub)"
+      madeWith = "Made with [Hugo moddedBear](https://github.com/moddedBear/hugo-moddedbear-theme)"
   [languages.pt]
-    title = "Bear Cub"
+    title = "Hugo moddedBear"
     languageName = "pt-BR 🇧🇷"
     LanguageCode = "pt-BR"
     contentDir = "content.pt"
     [languages.pt.params]
-      madeWith = "Feito com [Bear Cub](https://github.com/clente/hugo-bearcub)"
+      madeWith = "Feito com [Hugo moddedBear](https://github.com/moddedBear/hugo-moddedbear-theme)"
 
 [params]
   # The description of your website
-  description = "Bear Cub Demo"
+  description = "Hugo moddedBear Theme Demo"
 
   # The path to your favicon
   favicon = "images/favicon.png"
@@ -50,13 +58,19 @@ enableRobotsTXT = true
   # https://gohugo.io/templates/internal#open-graph
   images = ["images/share.webp"]
 
+  # The path to your avatar image for use on the home page. It should be somewhere
+  # in the /assets directory. You can comment or remove this line to hide the image.
+  avatarImage = "images/avatar.png"
+  avatarImageAlt = "My avatar" # A description of your avatar image
+
   # This title is used as the site_name on the Hugo's internal opengraph
-  # structured data template
-  title = "Bear Cub"
+  # structured data template.
+  # See https://ogp.me/ and https://gohugo.io/templates/internal#open-graph.
+  title = "Hugo moddedBear"
 
   # Dates are displayed following the format below. For more information about
   # formatting, see https://gohugo.io/functions/format/
-  dateFormat = "2006-01-02"
+  dateFormat = "Jan 2, 2006"
 
   # If your blog is multilingual but you haven't translated a page, this theme
   # will create a disabled link. By setting `hideUntranslated` to true, you can
@@ -67,7 +81,7 @@ enableRobotsTXT = true
   # "herman". The former is what you see on Bear Cub's demo (an optimized
   # version of Hugo Bear Blog), while the latter has a more modern look based on
   # Herman Martinus's version of the Blogster Minimal theme for Astro.
-  themeStyle = "original"
+  themeStyle = "herman"
 
   # (EXPERIMENTAL) This theme is capable of dynamically generating social cards
   # for posts that don't have `images` defined in their front matter; By setting
@@ -75,11 +89,29 @@ enableRobotsTXT = true
   # information see layouts/partials/social_card.html
   generateSocialCard = true
 
+  # Whether to hide the footer containing copyright and "made with" notices.
+  hideFooter = false
+
+  [params.home]
+    hideRecent = false
+    numRecent = 5 # Number of recent posts to display
+    hideFeatured = false
+    hideTags = false
+
+  [params.blog]
+    # The path to your contact page for visitors to be taken to when clicking the
+    # reply link at the end of a post. Comment to disable this functionality.
+    # contactPage = "/contact"
+  
+  [params.list]
+    tagsOnTop = false # Display tags at top of the post list instead of bottom
+
   # Social media. Delete any item you aren't using to make sure it won't show up
   # in your website's metadata.
   [params.social]
     twitter = "example" # Twitter handle (without '@')
     facebook_admin = "0000000000" # Facebook Page Admin ID
+    fediverse = "https://example.com/@me" # Link to profile for verification
 
   # Author metadata. This is mostly used for the RSS feed of your site, but the
   # email is also added to the footer of each post. You can hide the "reply to"
@@ -87,3 +119,4 @@ enableRobotsTXT = true
   [params.author]
     name = "John Doe" # Your name as shown in the RSS feed metadata
     email = "me@example.com" # Added to the footer so readers can reply to posts
+    fediverse = "@me@example.com" # For attribution (@user@example.com)
