--- a/theme.toml
+++ b/theme.toml
@@ -1,10 +1,10 @@
-name = "Bear Cub"
+name = "moddedbear"
 license = "MIT"
-licenselink = "https://github.com/clente/hugo-bearcub/blob/master/LICENSE"
-description = "A lightweight Hugo theme based on Bear Blog and Hugo Bear Blog. It is free, multilingual, optimized for search engines, no-nonsense, responsive, light, and fast. Really fast."
+licenselink = "https://github.com/moddedbear/hugo-moddedbear-theme/blob/master/LICENSE"
+description = "A lightweight Hugo theme based on Bear Blog and Hugo Bear Blog. It is free, multilingual, optimized for search engines, no-nonsense, responsive, light, and fast. Really fast. Forked from Bear Cub."
 
 # The home page of the theme, where the source can be found.
-homepage = "https://github.com/clente/hugo-bearcub"
+homepage = "https://github.com/moddedbear/hugo-moddedbear-theme"
 
 # If you have a running demo of the theme.
 demosite = "https://clente.github.io/hugo-bearcub"
@@ -14,14 +14,14 @@ features = ["favicon", "seo", "no javascript", "rss", "social cards"]
 
 # If the theme has a single author
 [author]
-    name = "Caio Lente"
-    homepage = "https://lente.dev"
+    name = "Jeremy Payne"
+    homepage = "https://moddedbear.com"
 
 # If porting an existing theme
 [original]
-    author = "Jan Raasch"
-    homepage = "https://www.janraasch.com"
-    repo = "https://github.com/janraasch/hugo-bearblog"
+    author = "Caio Lente"
+    homepage = "https://lente.dev"
+    repo = "https://github.com/clente/hugo-bearcub"
 
 # Hugo versions the theme supports
 [module]
